--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.517.0",
+    "next": "15.3.4",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-parallax-tilt": "^1.7.298",
+    "react-scroll-parallax": "^3.4.5",
+    "swiper": "^11.2.8",
+    "tailwindcss": "^4.1.10",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/cli": "^4.1.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "typescript": "^5"
   }
 }
