--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://arashmeester.my",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -6,11 +7,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "next build && next export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.10",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.517.0",
     "next": "15.3.4",
     "postcss": "^8.5.6",
