--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Next.js app
+      - name: Build with Next.js
         run: npm run build
 
-      - name: Upload static site to GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v2 # ✅ latest
-
+      - name: Upload static site
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./out
 
