--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 22
       - run: npm ci
-      - run: npm run build && npm run export
+      - run: npm run build
       - uses: actions/upload-artifact@v4
         with:
           path: ./out
