--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           path: ./out
+          name: github-pages
 
   deploy:
     needs: build
