--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 18
 
       - run: npm ci
-      - run: npm run build && npm run export
+      - run: npm run build
 
       - name: Upload static site
         uses: actions/upload-pages-artifact@v3
